<resources>
    <string name="app_name">Billio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="Signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">YouthConnect App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_posts">Posts</string>
    <string name="menu_events">Events</string>
    <string name="menu_users">Users</string>
    <string name="title_activity_affiliate">AffiliateActivity</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="action_logout">Logout</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="set_date">Set Date</string>
    <string name="enter_event_venue">Enter Event Venue</string>
    <string name="enter_event_description">Enter Event Description</string>
    <string name="add_event">Edit Event</string>
    <string name="edit_user">Edit User</string>
    <string name="slogan">Keep track of your bills and spending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="balance">Balance</string>
    <string name="report">Report</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="menu">Menu</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_bill_description">Enter Bill Description</string>
    <string name="due_date">Due Date</string>
    <string name="bill_status">Bill Status</string>
    <string name="bill_category">Bill Category</string>
    <string name="enter_description">Enter Description</string>
    <string name="date">Date</string>
</resources>