<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn ="navigation_view">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24" />
    <item
        android:id="@+id/calendar"
        android:title="@string/calendar"
        android:icon="@drawable/ic_baseline_calendar_month_24"/>
    <item
        android:id="@+id/balance"
        android:title="@string/balance"
        android:icon="@drawable/ic_baseline_payment_24"/>

    <item
        android:id="@+id/report"
        android:title="@string/report"
        android:icon="@drawable/ic_baseline_payments_24"/>
    <item
        android:id="@+id/profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_baseline_person_24"/>
</menu>